# berserk

./: .flake8  .gitignore  .readthedocs.yml  .tox_LOCAL_3097057.ini.un~  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  Test.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-and-test.yml  build-test-lint.yml
berserk/: __init__.py  berserk.py  client.py  clients.py  constants.py  enums.py  exceptions.py  formats.py  models.py  session.py  todo.md  utils.py
docs/: Makefile  announcing.rst  api.rst  berserk.rst  conf.py  index.rst  installation.rst  make.bat  modules.rst  usage.rst
docs/_static/css/: custom.css
tests/: conftest.py  test_berserk.py  test_formats.py  test_issues.py  test_models.py  test_session.py  test_utils.py
tests/integration/: test_berserk_integration.py
