[metadata]
name = berserk
version = 0.10.0
description = Python client for the lichess API
keywords = berserk
url = https://github.com/rhgrant10/berserk
long_description = file: README,
long_description_content_type = text/x-rst
author = Robert Grant
author_email = rhgrant10@gmail.com
license = GNU General Public License v3

[options]
zip_safe = True
include_package_data = True
packages = find:
install_requires = 
    requests>=2
    ndjson>=0.2
    deprecated>=1.2.7

[options.extras_require]
tests =
    coverage
    flake8
    pytest-cov
    pytest-runner
    pytest
dev =
    bumpversion
    sphinx-rtd-theme
    Sphinx
    twine
    watchdog
all =
    %(tests)s
    %(dev)s

[bumpversion]
current_version = 0.10.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:berserk/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

[coverage:run]
source = berserk
